--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -7,11 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
-    <link rel="stylesheet" href="css/product-list-page.css">
-    <link rel="stylesheet" href="css/pagination.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <script src="data.json"></script>
     <title>Document</title>
 </head>
 
@@ -31,44 +28,39 @@
         <div class="content">
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
-                <a href="product-list-page.html">Nhu yếu phẩm > </a>
-                <a href="product-list-page.html">Danh sách nhu yếu phẩm</a>
+                <a href="/nhu-yeu-pham">Nhu yếu phẩm > </a>
+                <a href="/danh-sach-san-pham">Danh sách nhu yếu phẩm</a>
+                <a href="/thit-heo-500gram">Thịt heo 500 gram</a>
             </div>
             <div class="searchbar">
                 <input type="text" class="searchbar-input" placeholder="Tìm kiếm nhu yếu phẩm">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <div id="product-list" class="product-list">
-                <div class="product-cardview invisible">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
+            <div id="product-detail">
+                <div id="product-detail-img" >
+                    <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%;" alt="">
+                </div>
+                <div id="product-detail-info">
+                    <div style="display: flex;flex-direction:column; justify-content: center; width: 100%;background-color: var(--grey2);">
+                        <p name="name" style="font-size: 30px;">Thịt heo 500 gram</p>
+                        <p name="price" style="font-size: 24px; font-weight: bold; color:#B01D1D;">100.000 VNĐ</p>
+                        <p name="weight" style="font-size: 20px;">Định lượng: 500 gram</p>
+                    </div>
+                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                        <i class="fa-solid fa-angle-left fa-3x btn" style="color: #9F8D8D;"></i>
+                        <div style="display:flex;">
+                            <div class="img-scale" style="width: 100px; height:150px; border: 2px solid #F02424; border-radius: 10px; background-color: var(--grey2);">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
                         </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
+                        <i class="fa-solid fa-angle-right fa-3x btn" style="color: #9F8D8D;"></i>
+                    </div>
+                    <div style="color:var(--blue1);width: 100%; background-color: var(--grey1);display:flex; justify-content: center; align-items: center;">
+                        <span class="fa-solid fa-pen fa-2x btn">
+                        <span class="fa-solid fa-trash-can btn">
                     </div>
                 </div>
-            </div>
-            <div class="page-container">
-                <button class="first-page" disabled>
-                  <i class="fas fa-angle-double-left"></i>
-                </button>
-                <button class="prev-page" disabled>
-                  <i class="fas fa-angle-left"></i>
-                </button>
-                <div id="pagination"></div>
-                <button class="next-page">
-                  <i class="fas fa-angle-right"></i>
-                </button>
-                <button class="last-page">
-                  <i class="fas fa-angle-double-right"></i>
-                </button>
-            </div>
-            <div class="button-add">
-                <i class="fa-solid fa-plus fa-3x"></i>
+               
             </div>
         </div>
 
@@ -91,7 +83,7 @@
                             <span>coco123@gmail.com</span>
                             <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
-
+                        
                     </div>
                 </div>
             </div>
@@ -104,8 +96,6 @@
             </div>
         </footer>
     </main>
-    <script src="javascript/product-list-page.js"></script>
-    <script src="./javascript/pagination.js"></script>
 </body>
 
 </html>
