--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -1,12 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+<>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/template-style.css">
+    <link rel="stylesheet" href="./css/related.css">
+    <link rel="stylesheet" href="./css/package-list.css">
     <title>Danh sách gói nhu yếu phẩm</title>
-</head>
-<body>
-    
-</body>
+    </head>
+
+    <body>
+        <main>
+            <nav class="navbar">
+                <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+                <ul class="nav-list">
+                    <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                    <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
+                    <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                    <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+                </ul>
+                <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+            </nav>
+            <img src="../images/banner.png" alt="banner" class="banner">
+            <div class="content" style="padding: 20px 20px;">
+                <div class="path">
+                    <a href="/trang-chu">Trang chủ > </a>
+                    <a href="/thong-tin-ca-nhan">Nhu yếu phẩm</a>
+                </div>
+                <div id="package-container">
+                    <div class="searchbar">
+                        <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
+                    <div id="package-filters" class="row">
+                        <div class="col-lg-4 col-md-12 col-sm-12">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle text-black" type="button"
+                                    id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Sắp xếp theo
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                    <li><button class="dropdown-item" type="button">Giá tăng dần</button></li>
+                                    <li><button class="dropdown-item" type="button">Giá giảm dần</button></li>
+                                    <li><button class="dropdown-item" type="button">Không</button></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class=" col-lg-4 col-md-4 col-sm-12">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle text-black" type="button"
+                                    id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Lọc theo mức giá
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                    <li><button class="dropdown-item" type="button">Dưới 100,000đ</button></li>
+                                    <li><button class="dropdown-item" type="button">100,000đ - 200,000đ</button></li>
+                                    <li><button class="dropdown-item" type="button">200,000đ - 500,000đ</button></li>
+                                    <li><button class="dropdown-item" type="button">Trên 500,000đ</button></li>
+                                    <li><button class="dropdown-item" type="button">Không</button></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-12">
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle text-black" type="button"
+                                    id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Lọc theo loại sản phẩm
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                    <li><button class="dropdown-item" type="button">Thực phẩm tươi sống</button></li>
+                                    <li><button class="dropdown-item" type="button">Rau củ quả</button></li>
+                                    <li><button class="dropdown-item" type="button">Gia vị</button></li>
+                                    <li><button class="dropdown-item" type="button">Đồ dùng nhà bếp</button></li>
+                                    <li><button class="dropdown-item" type="button">Không</button></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="package-list"></div>
+                    <div id="pages"></div>
+                </div>
+            </div>
+            </div>
+
+            <script></script>
+            <footer class="footer">
+                <div class="footer-top">
+                    <div class="footer-box">
+                        <h3>VỀ CHÚNG TÔI</h3>
+                        <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương
+                            thức
+                            thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                    </div>
+                    <div class="footer-box">
+                        <h3>LIÊN HỆ</h3>
+                        <div>
+                            <div class="footer-contact">
+                                <span class="fa-solid fa-phone"></span>
+                                <span>+84945335984</span>
+                            </div>
+                            <div class="footer-contact">
+                                <span class="fa-solid fa-envelope"></span>
+                                <span>coco123@gmail.com</span>
+                                <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <hr style="border: 2px solid white;background-color: white; width: 98%" />
+                    <div class="footer-bottom-slogan">
+                        <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
+                        <span style="float: right;">2022</span>
+                    </div>
+                </div>
+            </footer>
+        </main>
+    </body>
+
 </html>
