--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
     <link rel="stylesheet" href="css/product-detail-page.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Document</title>
@@ -16,7 +18,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img class="logo-img" src="/CoCo/front-end/images/Logo.png" alt="logo">
+            <img class="logo-img my-btn" src="/CoCo/front-end/images/Logo.png" alt="logo">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
@@ -43,22 +45,39 @@
                 </div>
                 <div id="product-detail-info">
                     <div style="display: flex;flex-direction:column; justify-content: center; width: 100%;background-color: var(--grey2);">
-                        <p name="name" style="font-size: 30px;">Thịt heo 500 gram</p>
-                        <p name="price" style="font-size: 24px; font-weight: bold; color:#B01D1D;">100.000 VNĐ</p>
-                        <p name="weight" style="font-size: 20px;">Định lượng: 500 gram</p>
+                        <p name="name" class="product-name">Thịt heo 500 gram</p>
+                        <p name="price" class="product-price">100.000 VNĐ</p>
+                        <p name="weight" class="product-weight">Định lượng: 500 gram</p>
                     </div>
-                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-                        <i class="fa-solid fa-angle-left fa-3x btn" style="color: #9F8D8D;"></i>
-                        <div style="display:flex;">
+                    <div style="display: flex;  justify-content: center; align-items: center; width: 100%; position: relative;">
+                        <i id="leftlst" class="fa-solid fa-angle-left fa-3x my-btn" style="color:#9F8D8D;"></i>
+                        <div class="product-img-carousel">
+                            <div id="heoheo" style="display:flex;">
+                            <div class="img-scale detail-image-list active">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
+                            <div class="img-scale detail-image-list">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
+                            <div class="img-scale detail-image-list">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
+                            <div class="img-scale detail-image-list">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
+                            <div class="img-scale detail-image-list">
+                                <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
+                            </div>
                             <div class="img-scale detail-image-list">
                                 <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
                             </div>
                         </div>
-                        <i class="fa-solid fa-angle-right fa-3x btn" style="color: #9F8D8D;"></i>
+                        </div>
+                        <i id="rightlst" class="fa-solid fa-angle-right fa-3x my-btn" style="color:#9F8D8D;"></i>
                     </div>
                     <div style="color:var(--blue1);width: 100%; background-color: var(--grey1);display:flex; justify-content: center; align-items: center;">
-                        <span class="fa-solid fa-pen fa-2x btn">
-                        <span class="fa-solid fa-trash-can btn">
+                        <span class="fa-solid fa-pen fa-2x my-btn" style="margin:5px;">
+                        <span class="fa-solid fa-trash-can fa-1x my-btn" style="margin:5px;">
                     </div>
                 </div>
                
@@ -97,6 +116,7 @@
             </div>
         </footer>
     </main>
+    <script src="javascript/product-detail-page.js"></script>
 </body>
 
 </html>
