--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -5,46 +5,63 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="../css/style.css">
+    <title>CoCo</title>
 </head>
 
 <body>
-    <main>
-        <nav class="navbar">
-            <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-            <ul class="nav-list">
-                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
-                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
-                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
-            </ul>
-            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+    <main class="index">
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                QUẢN LÝ
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">XEM DANH SÁCH</a></li>
+                                <li><a class="dropdown-item" href="#">THÊM NGƯỜI QUẢN LÝ</a></li>
+                                <li><a class="dropdown-item" href="#">LỊCH SỬ HOẠT ĐỘNG</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                ĐỊA ĐIỂM
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">XEM DANH SÁCH</a></li>
+                                <li><a class="dropdown-item" href="#">THÊM ĐỊA ĐIỂM</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <img src="images/banner.png" alt="banner" class="banner">
-        <div class="content">
-            <div class="searchbar">
-                <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
+        <section>
+            <img src="../images/banner.png" alt="banner" class="banner">
+        </section>
 
-            <div class="page-container">
-                <button class="first-page" disabled>
-                  <i class="fas fa-angle-double-left"></i>
-                </button>
-                <button class="prev-page" disabled>
-                  <i class="fas fa-angle-left"></i>
-                </button>
-                <div id="pagination"></div>
-                <button class="next-page">
-                  <i class="fas fa-angle-right"></i>
-                </button>
-                <button class="last-page">
-                  <i class="fas fa-angle-double-right"></i>
-                </button>
-            </div>
-        </div>
+        <section class="content container-fluid py-5">
+            <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
+        </section>
 
         <footer class="footer">
             <div class="footer-top">
@@ -63,7 +80,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
@@ -79,8 +96,10 @@
         </footer>
     </main>
 
-    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
-    <script src="./js/pagination.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
