--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/template-style.css">
     <link rel="stylesheet" href="./css/related.css">
     <title>Thông tin chi tiết cá nhân</title>
@@ -17,37 +16,22 @@
 
 <body>
     <main>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">TÀI KHOẢN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
-                <a href="index.html">Trang chủ > </a>
-                <a href="#">Thông tin cá nhân > </a>
-                <a href="#">Thông tin chi tiết</a>
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/thong-tin-ca-nhan">Thông tin cá nhân > </a>
+                <a href="/thong-tin-chi-tiet">Thông tin chi tiết</a>
             </div>
             <div class="info-container">
                 <div class="side-info">
@@ -71,11 +55,9 @@
                 </div>
                 <div class="detail-container">
                     <div id="row-tabs">
-                        <div id="tab-detail" class="tab" style="background-color: #EEEEEE;"><a
-                                href="information.html">Thông tin chi tiết</a></div>
+                        <div id="tab-detail" class="tab" style="background-color: #EEEEEE;"><a href="information.html">Thông tin chi tiết</a></div>
                         <div id="tab-history" class="tab"><a href="managed-history.html">Lịch sử được quản lý</a></div>
-                        <div id="tab-consumption" class="tab"><a href="consumption-history.html">Lịch sử tiêu thụ</a>
-                        </div>
+                        <div id="tab-consumption" class="tab"><a href="consumption-history.html">Lịch sử tiêu thụ</a></div>
                         <div id="tab-payment" class="tab"><a href="payment-history.html">Lịch sử thanh toán</a></div>
                     </div>
                     <div id="detail">
@@ -133,10 +115,6 @@
             </div>
         </footer>
     </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
