--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -6,60 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/template-style.css">
-    <link rel="stylesheet" href="../manager/products/css/pagination.css">
     <link rel="stylesheet" href="./css/related.css">
     <link rel="stylesheet" href="./css/package-list.css">
-    
     <title>Danh sách gói nhu yếu phẩm</title>
 </head>
 
 <body>
     <main>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">TÀI KHOẢN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
-                <a href="index.html">Trang chủ > </a>
-                <a href="#">Nhu yếu phẩm</a>
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/thong-tin-ca-nhan">Nhu yếu phẩm</a>
             </div>
             <div id="package-container">
                 <div class="searchbar">
                     <input type="text" class="searchbar-input" placeholder="Tìm kiếm sản phẩm">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <div class="go-to-cart" style="float:right; margin-right: 30px;">
+                <div class="go-to-cart" style="float:inline-end; margin: auto 30px;">
                     <a href="cart.html"><img src="images/cart.png" alt="cart"></a>
                 </div>
-                <div id="package-filters" class="row" style="clear: both;">
+                <div id="package-filters" class="row">
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle text-black" type="button"
@@ -397,21 +382,7 @@
 
                 </div>
 
-                <div class="page-container">
-                    <button class="first-page" disabled>
-                      <i class="fas fa-angle-double-left"></i>
-                    </button>
-                    <button class="prev-page" disabled>
-                      <i class="fas fa-angle-left"></i>
-                    </button>
-                    <div id="pagination"></div>
-                    <button class="next-page">
-                      <i class="fas fa-angle-right"></i>
-                    </button>
-                    <button class="last-page">
-                      <i class="fas fa-angle-double-right"></i>
-                    </button>
-                </div>
+                <div id="pages"></div>
             </div>
         </div>
         </div>
@@ -450,10 +421,6 @@
             </div>
         </footer>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-    <script src="../admin/js/pagination.js"></script>
 </body>
 
 </html>
